Finished navbar, fixed alignment on navbar.

--- a/storefront/css/adjustments.css
+++ b/storefront/css/adjustments.css
@@ -8,7 +8,6 @@ div.pricebox {
 h4 {
   padding: 5%;
 }
-button {
-  margin: 10%;
-  padding: 10%;
+button.openbtn {
+  margin-top: 10px;
 }
